Update todo form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,5 +39,6 @@ en:
   name: "Name"
   new_list: "New List"
   purge_done_todos: "Purge Done Todos"
+  send_to_calendar: "Send to Calendar"
   submit: "Submit"
   todos: "Todos"
