Move add delete list modal

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,7 @@ en:
   lists: "Lists"
   name: "Name"
   new_list: "New List"
+  purge: "Purge"
   purge_done_todos: "Purge Done Todos"
   send_to_calendar: "Send to Calendar"
   submit: "Submit"
