Fix new todo typo

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,7 @@ en:
   lists: "Lists"
   name: "Name"
   new_list: "New List"
+  new_todo: "New Todo"
   purge: "Purge"
   purge_done_todos: "Purge Done Todos"
   send_to_calendar: "Send to Calendar"
